objects/CN_Payment_Report__c.object
<CustomObject>
    <description>The payment information will be shown in SFDC through the SAP interface</description>
    <fields>
        <fullName>CN_AR_Update_Date__c</fullName>
        <label>AR Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Advance_Received_From_Customer_Credit__c</fullName>
        <description>ZSGL03</description>
        <label>Advance Received From Customer Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Advc_Received_From_Custm_Credit_Dsply__c</fullName>
        <formula>IF( CN_Is_Activated__c =TRUE, CN_Advance_Received_From_Customer_Credit__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advc Received From Custm Credit Dsply</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Brand_SAP__c</fullName>
        <description>HNAME4</description>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Brand__c</fullName>
        <formula>CN_Customer__r.CN_Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Business_Unit_SAP__c</fullName>
        <description>HNAME1</description>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Business_Unit__c</fullName>
        <formula>CN_Customer__r.CN_Business_Unit_UI__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Channel_SAP__c</fullName>
        <description>VTWEG</description>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_Credit_Limit_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Credit_Limit_SAP__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Limit Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Credit_Limit_SAP__c</fullName>
        <description>KLIMK</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Current_Balance_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Current_Balance_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Balance Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Current_Balance_SAP__c</fullName>
        <description>CURRENTBALANCE</description>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Current_Month_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Current_Month_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Month Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Current_Month_SAP__c</fullName>
        <description>ZCM</description>
        <label>Current Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Current_Payment_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Current_Payment_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Payment Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Current_Payment_SAP__c</fullName>
        <description>CURRENTPAYMENT</description>
        <label>Current Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Channel__c</fullName>
        <formula>CN_Customer__r.CN_Sales_Team_UI__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Code_SAP__c</fullName>
        <description>Extenerl ID
Unique Id</description>
        <externalId>true</externalId>
        <label>Customer Code SAP</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Customer_Code__c</fullName>
        <formula>CN_Customer__r.CN_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer__c</fullName>
        <description>KUNNR</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Payment_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_Date_Type_SAP__c</fullName>
        <description>DTYPE</description>
        <label>Date Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Deliver_Block_SAP__c</fullName>
        <description>BLOCKDELIVERY</description>
        <label>Deliver Block</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Deposit_Given_To_Customer_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Deposit_Given_To_Customer_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Given To Customer Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Deposit_Given_To_Customer_SAP__c</fullName>
        <description>ZSGL02</description>
        <label>Deposit Given To Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Deposit_Received_From_Customer_Dsply__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Deposit_Received_From_Customer_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Received From Customer Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Deposit_Received_From_Customer_SAP__c</fullName>
        <description>ZSGL01</description>
        <label>Deposit Received From Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Details_of_Arrears__c</fullName>
        <label>Details of Arrears</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_Finance_AR_Name_SAP__c</fullName>
        <description>ARNAME</description>
        <label>Finance AR Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Finance_AR__c</fullName>
        <formula>CN_Customer__r.CN_Finance_AR__r.LastName &amp; CN_Customer__r.CN_Finance_AR__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance AR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Group_SAP__c</fullName>
        <description>HNAME3</description>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Group__c</fullName>
        <formula>CN_Customer__r.CN_Group_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_Activated__c</fullName>
        <description>LastMofiedDate = Today</description>
        <formula>NOT(ISPICKVAL( CN_Sent_Reminder_Level__c , &quot;&quot;) ||   ISPICKVAL( CN_Sent_Reminder_Level__c , &quot;Paid&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Last_1_Month_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Last_1_Month_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 1 Month Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Last_1_Month_SAP__c</fullName>
        <description>ZL1</description>
        <label>Last 1 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Last_2_Month_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Last_2_Month_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 2 Month Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Last_2_Month_SAP__c</fullName>
        <description>ZL2</description>
        <label>Last 2 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Last_3_Month_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Last_3_Month_SAP__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 3 Month Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Last_3_Month_SAP__c</fullName>
        <description>ZL3</description>
        <label>Last 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Legal_Cases_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Legal_Cases_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Cases Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Legal_Cases_SAP__c</fullName>
        <description>ZSGL04</description>
        <label>Legal Cases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_License_Name_CN_SAP__c</fullName>
        <description>NAME1</description>
        <label>License Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_License_Name_EN_SAP__c</fullName>
        <description>NAME_AD</description>
        <label>License Name EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_License_Name_EN__c</fullName>
        <formula>CN_Customer__r.CN_License_Name_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Name EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_License_Name__c</fullName>
        <formula>CN_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Order_Block_SAP__c</fullName>
        <description>BLOCKORDER</description>
        <label>Order Block</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Overdue_0_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Overdue_0_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue 0 Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Overdue_0_SAP__c</fullName>
        <description>OVERDUE00</description>
        <label>Overdue 0</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Overdue_10_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Overdue_10_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue 10 Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Overdue_10_SAP__c</fullName>
        <description>OVERDUE10</description>
        <label>Overdue 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Overdue_120_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Overdue_120_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue 120 Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Overdue_120_SAP__c</fullName>
        <description>OVERDUE120</description>
        <label>Overdue 120</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Overdue_540_Up_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Overdue_540_Up_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue 540 Up Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Overdue_540_Up_SAP__c</fullName>
        <description>OVERDUE540UP</description>
        <label>Overdue 540 Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Overdue_60_Up_SAP__c</fullName>
        <formula>CN_Overdue_90_SAP__c +  CN_Overdue_120_SAP__c  +  CN_Overdue_180_SAP__c +  CN_Overdue_360_SAP__c +  CN_Overdue_540_SAP__c +  CN_Overdue_540_Up_SAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue 60 Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Payment_Schedule__c</fullName>
        <label>Payment Schedule</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Payment_Term_SAP__c</fullName>
        <description>ZTERM</description>
        <label>Payment Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Payment_Term__c</fullName>
        <formula>TEXT(CN_Customer__r.CN_Payment_Terms__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Recon_Diff_Deduction_Fee_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Recon_Diff_Deduction_Fee_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recon Diff Deduction Fee Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Recon_Diff_Deduction_Fee_SAP__c</fullName>
        <description>ZSGL05</description>
        <label>Recon Diff Deduction Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Group_SAP__c</fullName>
        <description>ZVKGRP</description>
        <label>Sales Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Office_SAP__c</fullName>
        <description>ZVKBUR</description>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Office__c</fullName>
        <formula>CN_Customer__r.Owner.CN_Sales_Office__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person_Name_SAP__c</fullName>
        <description>SPNAME</description>
        <label>Sales Person Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person__c</fullName>
        <formula>CN_Customer__r.CN_Sales_Person_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Team_SAP__c</fullName>
        <description>HNAME2</description>
        <label>Sales Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Team__c</fullName>
        <formula>CN_Customer__r.CN_Sales_Team_UI__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sent_Reminder_Level__c</fullName>
        <label>Sent Reminder Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reminder 1</fullName>
                </value>
                <value>
                    <fullName>Reminder 2</fullName>
                </value>
                <value>
                    <fullName>Reminder 3</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Postpone to Block</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Total_Balance_SAP_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Total_Balance_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance SAP  Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Total_Balance_SAP__c</fullName>
        <description>TOTALBALANCE</description>
        <label>Total Balance SAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Total_Overdue_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_Total_Overdue_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Overdue Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Total_Overdue_SAP__c</fullName>
        <description>TOTALOVERDUE</description>
        <label>Total Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Total_Reminder_Amount__c</fullName>
        <label>Total Reminder Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Transport_Date__c</fullName>
        <label>Transport Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_VAT_Balance_Display__c</fullName>
        <formula>IF( CN_Is_Activated__c =true ,CN_VAT_Balance_SAP__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Balance Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_VAT_Balance_SAP__c</fullName>
        <description>VATBALANCE</description>
        <label>VAT Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>AR Aging Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Customer_Channel__c</columns>
        <columns>CN_Customer_Code__c</columns>
        <columns>CN_Customer__c</columns>
        <columns>CN_Sales_Person__c</columns>
        <columns>CN_Finance_AR__c</columns>
        <columns>CN_Sent_Reminder_Level__c</columns>
        <columns>CN_Details_of_Arrears__c</columns>
        <columns>CN_Total_Reminder_Amount__c</columns>
        <columns>CN_Payment_Schedule__c</columns>
        <columns>CN_Comments__c</columns>
        <columns>CN_Overdue_10_SAP__c</columns>
        <columns>CN_Overdue_30_SAP__c</columns>
        <columns>CN_Overdue_60_SAP__c</columns>
        <columns>CN_Overdue_60_Up_SAP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Payment_Report__c.CN_Payment_Report</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CN_All_Overdue_info</fullName>
        <columns>NAME</columns>
        <columns>CN_Customer_Channel__c</columns>
        <columns>CN_Customer_Code__c</columns>
        <columns>CN_Customer__c</columns>
        <columns>CN_Sales_Person__c</columns>
        <columns>CN_Finance_AR__c</columns>
        <columns>CN_Sent_Reminder_Level__c</columns>
        <columns>CN_Details_of_Arrears__c</columns>
        <columns>CN_Total_Reminder_Amount__c</columns>
        <columns>CN_Payment_Schedule__c</columns>
        <columns>CN_Comments__c</columns>
        <columns>CN_Overdue_10_SAP__c</columns>
        <columns>CN_Overdue_30_SAP__c</columns>
        <columns>CN_Overdue_60_SAP__c</columns>
        <columns>CN_Overdue_60_Up_SAP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Total_Overdue_SAP__c</field>
            <operation>greaterThan</operation>
            <value>CNY 0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Payment_Report__c.CN_Payment_Report</value>
        </filters>
        <label>All Overdue info</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000000000}</displayFormat>
        <label>AR Aging Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Aging Infos</pluralLabel>
    <recordTypes>
        <fullName>CN_Payment_Report</fullName>
        <active>true</active>
        <label>CN Payment Report</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>